Test Travis CI integration

--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,11 @@
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-60153-42"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
+
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+
         gtag('js', new Date());
 
         gtag('config', 'UA-60153-42');
@@ -42,7 +46,8 @@
         <div class="col-sm-10 offset-sm-1">
             <h2 class="text-center">Get top 10 posts straight to your inbox</h2>
             <div class="col-sm-10 offset-sm-1 col-12 offset-0">
-                <h3 class="text-center mb-5">Stop browsing your favourite sites all day long. Get email with the most popular posts
+                <h3 class="text-center mb-5">Stop browsing your favourite sites all day long. Get email with the most
+                    popular posts
                     once a day (or once a week). <a href="#example-email">See example email</a>.</h3>
             </div>
             <form action="https://formspree.io/hello@mrpostman.io" method="POST">
@@ -52,12 +57,14 @@
                     </div>
                     <div class="form-group col-5 radio-group">
                         <div class="custom-control custom-radio custom-control-inline">
-                            <input type="radio" value="none" id="ihRadio0" name="indie-hackers" class="custom-control-input"
+                            <input type="radio" value="none" id="ihRadio0" name="indie-hackers"
+                                   class="custom-control-input"
                                    checked="checked">
                             <label class="custom-control-label" for="ihRadio0">none</label>
                         </div>
                         <div class="custom-control custom-radio custom-control-inline">
-                            <input type="radio" value="daily" id="ihRadio1" name="indie-hackers" class="custom-control-input">
+                            <input type="radio" value="daily" id="ihRadio1" name="indie-hackers"
+                                   class="custom-control-input">
                             <label class="custom-control-label" for="ihRadio1">daily</label>
                         </div>
                         <div class="custom-control custom-radio custom-control-inline">
@@ -73,12 +80,14 @@
                     </div>
                     <div class="form-group col-5 radio-group">
                         <div class="custom-control custom-radio custom-control-inline">
-                            <input type="radio" value="none" id="phRadio0" name="product-hunt" class="custom-control-input"
+                            <input type="radio" value="none" id="phRadio0" name="product-hunt"
+                                   class="custom-control-input"
                                    checked="checked">
                             <label class="custom-control-label" for="phRadio0">none</label>
                         </div>
                         <div class="custom-control custom-radio custom-control-inline">
-                            <input type="radio" value="daily" id="phRadio1" name="product-hunt" class="custom-control-input">
+                            <input type="radio" value="daily" id="phRadio1" name="product-hunt"
+                                   class="custom-control-input">
                             <label class="custom-control-label" for="phRadio1">daily</label>
                         </div>
                         <div class="custom-control custom-radio custom-control-inline">
@@ -94,12 +103,14 @@
                     </div>
                     <div class="form-group col-5 radio-group">
                         <div class="custom-control custom-radio custom-control-inline">
-                            <input type="radio" value="none" id="hnRadio0" name="hacker-news" class="custom-control-input"
+                            <input type="radio" value="none" id="hnRadio0" name="hacker-news"
+                                   class="custom-control-input"
                                    checked="checked">
                             <label class="custom-control-label" for="hnRadio0">none</label>
                         </div>
                         <div class="custom-control custom-radio custom-control-inline">
-                            <input type="radio" value="daily" id="hnRadio1" name="hacker-news" class="custom-control-input">
+                            <input type="radio" value="daily" id="hnRadio1" name="hacker-news"
+                                   class="custom-control-input">
                             <label class="custom-control-label" for="hnRadio1">daily</label>
                         </div>
                         <div class="custom-control custom-radio custom-control-inline">
